# ros-head-tracking

./: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdep.yaml  stack.xml
cfg/: Filter.cfg
head_pose_estimation/: CMakeLists.txt  extract_head_cloud.py  head_pose_filter.py  head_pose_kalman.py  manifest.xml  readme.txt
head_pose_estimation/cfg/: FilterConfig.cfgc
head_pose_estimation/cfg/cpp/head_pose_estimation/: FilterConfigConfig.h
head_pose_estimation/launch/: estimator.launch  face_tracker_kinect.launch  filters.launch
head_pose_estimation/nodes/: flow.py  head_pose_kalman.py
head_pose_estimation/src/: main.cpp
headmath/: mainpage.dox  manifest.xml
headmath/src/headmath/: conversions.py
launch/: estimator.launch
nodes/: flow.py  head_pose_kalman.py
rosmouse/: CMakeLists.txt  art_demo.py  mainpage.dox  manifest.xml  mouse.py  test.py
rosmouse/cfg/: ._mouse.cfg  mouse.cfg  mouse.cfgc
rosmouse/cfg/cpp/rosmouse/: MouseConfig.h
rosmouse/launch/: demo.launch
rosmouse/src/rosmouse/: ._filters.py  filters.py
rosmouse/src/rosmouse/cfg/: MouseConfig.py
src/: CRTree.cpp  main.cpp
